<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="ad_attribution">Ad</string>
    <string name="api_cancelled_error_title">Yêu cầu bị huỷ</string>
    <string name="api_chapter_download_exception_error_title">Lưu dữ liệu chương truyện thất bại, vui lòng thử lại hoặc gửi báo lỗi</string>
    <string name="api_data_exception_error_title">Phân tích dữ liệu lỗi, vui lòng thử lại</string>
    <string name="api_default_error_title">Có lỗi xảy ra, vui lòng thử lại</string>
    <string name="api_error_code_title">Yêu cầu thất bại (Mã lỗi: %d)</string>
    <string name="api_forbidden_error_title">Hành động bị hạn chế vì không đủ quyền, vui lòng thử đăng nhập lại hoặc sử dụng tài khoản khác</string>
    <string name="api_internal_server_error_title">Máy chủ đang quá tải, bảo trì, vui lòng thử lại sau</string>
    <string name="api_network_disconnect_error_title">Không thể kết nối với máy chủ, vui lòng kiểm tra kết nối mạng (wifi, 4g)</string>
    <string name="app_full_name">TYT - Truyện Full</string>
    <string name="app_name">Truyện Full</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="author_format">• %s</string>
    <string name="author_stories_empty_message">Không có truyện nào</string>
    <string name="author_stories_navigation_title">Tác Giả</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="callComputeLastReadCfi">javascript:computeLastReadCfi()</string>
    <string name="callScrollToCfi">javascript:scrollToCfi(\"%s\")</string>
    <string name="cancel">Huỷ</string>
    <string name="category_format">Thể loại : %s</string>
    <string name="category_setting_note">* Sau khi lưu thành công, bạn vui lòng khởi động lại ứng dụng để thiết lập cài đặt mới</string>
    <string name="category_setting_title">Cài Đặt Thể Loại</string>
    <string name="channel_description">TYT - Truyện Full</string>
    <string name="channel_name">TYT</string>
    <string name="chapter_count_format">%d chương</string>
    <string name="chapter_count_view_format" formatted="false">%d chương • Đang xem: %d</string>
    <string name="chapter_download_item" formatted="false">%d - %d</string>
    <string name="chapter_download_item_downloading" formatted="false">Đang tải %d - %d</string>
    <string name="chapter_download_item_success" formatted="false">Tải hoàn thành %d - %d</string>
    <string name="chapter_download_title">Tải Truyện - %s</string>
    <string name="chapter_list">Danh Sách Chương</string>
    <string name="chapter_view_format">Đang xem: %d</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="com_facebook_device_auth_instructions">Visit &lt;b>facebook.com/device&lt;/b> and enter the code shown above.</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_loading">Loading…</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_in_button_continue">Continue with Facebook</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_send_button_text">Send</string>
    <string name="com_facebook_share_button_text">Share</string>
    <string name="com_facebook_smart_device_instructions">To connect your account, open the Facebook app on your mobile device and check for notifications.</string>
    <string name="com_facebook_smart_device_instructions_or">- OR -</string>
    <string name="com_facebook_smart_login_confirmation_cancel">Not you?</string>
    <string name="com_facebook_smart_login_confirmation_continue_as">Continue as %1$s</string>
    <string name="com_facebook_smart_login_confirmation_title">Confirm Login</string>
    <string name="com_facebook_tooltip_default">"You're in control - choose what info you want to share with apps."</string>
    <string name="comment">Bình luận</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="community_readlists_search_hint">Nhập từ khoá muốn tìm</string>
    <string name="confirm_title">Xác Nhận</string>
    <string name="copy_toast_msg">Link copied to clipboard</string>
    <string name="count_downloaded_chapter_dummy">Đã tải: ... / ...</string>
    <string name="count_downloaded_chapter_format" formatted="false">Đã tải: %d / %d</string>
    <string name="css_tag">&lt;link rel=\"stylesheet\" type=\"text/css\" href=\"%s\" /></string>
    <string name="dark_mode">Chế độ ban đêm</string>
    <string name="debug_start_drag">Starting drag!</string>
    <string name="debug_start_unable_drag">Starting unable to drag!</string>
    <string name="default_web_client_id">542716458455-6i9pl4libd6uog2jv7uuaqjsvhhickoj.apps.googleusercontent.com</string>
    <string name="delete">Xoá</string>
    <string name="delete_downloaded_story_confirm_message">Xoá các chương đã tải của truyện trên thiết bị này?</string>
    <string name="delete_liked_story_confirm_message">Xoá yêu thích của truyện trên thiết bị này?</string>
    <string name="delete_loading">Đang xoá</string>
    <string name="delete_read_story_confirm_message">Xoá lịch sử xem của truyện trên thiết bị này?</string>
    <string name="delete_success_message">Đã Xoá</string>
    <string name="description">GIỚI THIỆU</string>
    <string name="download_history_empty_message">"Không có dữ liệu.
Bạn hãy đăng nhập và tải truyện mình muốn đọc offline"</string>
    <string name="download_history_navigation_title">Truyện đã tải</string>
    <string name="download_story_empty_message">"Không có dữ liệu

Truyện đã tải về máy sẽ hiển thị ở đây.
Đọc offline, không cần kết nối mạng."</string>
    <string name="downloading">Đang tải</string>
    <string name="error_icon_content_description">Error</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="facebook_app_id">343569532993281</string>
    <string name="fallback_menu_item_copy_link">Copy link</string>
    <string name="fallback_menu_item_open_in_browser">Open in browser</string>
    <string name="fallback_menu_item_share_link">Share link</string>
    <string name="fb_login_protocol_scheme">fb343569532993281</string>
    <string name="feedback">Phản Hồi</string>
    <string name="feedback_chooser_title">Chọn ứng dụng mail (Gmail) gửi phản hồi:</string>
    <string name="feedback_confirm_popup_message">Bạn muốn gửi mail phản hồi, góp ý, báo lỗi truyện, lỗi chương?</string>
    <string name="title_category">Thể Loại</string>
    <string name="title_feature">Khám Phá</string>
    <string name="title_history">Lịch Sử</string>
    <string name="title_person">Cá Nhân</string>
    <string name="title_search">Tìm Kiếm</string>
</resources>