<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_feature"
        android:icon="@drawable/ic_explore_black_24dp"
        android:title="@string/title_feature" />
    <item
        android:id="@+id/navigation_category"
        android:icon="@drawable/ic_menu_black_24dp"
        android:title="@string/title_category" />
    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/title_search" />
    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/ic_history_black_24dp"
        android:title="@string/title_history" />
    <item
        android:id="@+id/navigation_person"
        android:icon="@drawable/outline_person_black_24"
        android:title="@string/title_person" />
</menu>